<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--自定义下拉刷新和上拉加载 -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <!-- home -->
    <string name="app_name">我的应用</string>
    <string name="tab_function">首页</string>
    <string name="tab_news_center">音乐</string>
    <string name="tab_smart_service">新闻</string>
    <string name="tab_gov_affairs">记事</string>
    <string name="tab_setting">我</string>
    <string name="top_title">首页</string>
    <string name="action_settings">设置</string>
    <!--music  -->
    <string name="music_home_title">音乐世界</string>
    <string name="lyric_empty">没有歌词,点击手动下载</string>
    <string name="totalTime_tv">00:00</string>
    <string name="muisc_line"> - </string>
    <!-- ios dialog -->
    <string name="dialog_message">消息</string>
    <string name="dialog_image">图片</string>
    <string name="dialog_list">列表</string>
    <string name="dialog_alert_title">选择对话框</string>
    <string name="dialog_alert">确定对话框</string>
    <!-- 小工具 -->
    <string name="tools_interest_title">利息(元)</string>
    <string name="tools_total_title">本息合计(元)</string>
    <!-- note -->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="notes">Notes</string>
    <string name="archive">Archives</string>
    <string name="new_note">New note</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="star">Star</string>
    <string name="starred">Starred</string>
    <string name="restore">Restore</string>
    <string name="wr_import">Import</string>
    <string name="unstar">Unstar</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_overwrite">File already exists, overwrite?</string>
    <string name="incorrect_pin_text">Incorrect pin</string>
    <string name="title">Title</string>
    <string name="untitled">Untitled</string>
    <string name="empty_directory">This directory is empty</string>
    <string name="navigate_up_folder">Back to previous folder</string>
    <string name="folder_name_hint">Enter the name of your folder</string>
    <string name="new_name_hint">Enter new name</string>
    <string name="create_folder">Create Folder</string>
    <string name="move">Move</string>
    <string name="import_from_device">Import from device</string>
    <string name="select_folder_move">Select folder</string>
    <string name="select_root_folder">Select folder</string>
    <string name="empty_notes_list_hint">When you create a new note,\nthis is where it will show up</string>
    <string name="empty_archives_hint">When you archive a note, \nthis is where it will show up</string>
    <string name="empty_starred_hint">When you star a note,\nthis is where it will show up</string>
    <string name="search_hint">Search notes</string>
    <string name="share_string">Share to&#8230;</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="preview">Preview</string>
    <string name="edit">Edit</string>
    <string name="app_settings">App Settings</string>
    <string name="editor_settings">Editor Settings</string>
    <string name="social">Social</string>
    <string name="meta">Meta</string>
    <string name="folders">Folders</string>
    <string name="files">Files</string>
    <string name="email_header">Feedback about Writeily</string>
    <!-- Preferences -->
    <string name="pref_remember_directory">Remember last folder location on startup</string>
    <string name="pref_font_choice">Note Editor Font</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_rate_writeily">Rate Writeily on Google Play</string>
    <string name="pref_donate_writeily">Donate</string>
    <string name="pref_preview_first">Preview first when opening notes</string>
    <string name="translators_title">Translators</string>
    <string name="pref_about_dialog_title">About Writeily</string>
    <string name="pref_attribution_dialog_title">Attributions</string>
    <string name="pref_twitter">Follow Writeily on Twitter</string>
    <string name="pref_email">Email Support</string>
    <string name="share_text">Plain Text</string>
    <string name="share_image">Image</string>
    <string name="share_as">Share as&#8230;</string>
    <string name="pref_font_size">Font Size</string>
    <string name="pref_lock_settings">Lock</string>
    <string name="pref_pin_lock">Pin Lock</string>
    <string name="pref_alpha_pin_lock">Alphanumeric Lock</string>
    <string name="pref_no_lock">No Lock</string>
    <string name="pref_show_markdown_shortcuts">Show Markdown shortcuts bar</string>
    <string name="pref_highlighting_activated">Markdown syntax highlighting</string>
    <string name="pref_highlighting_delay">Delay in milliseconds for highlighting refresh</string>
    <string name="pref_highlighting_delay_summary">Higher values are easier on the battery</string>
    <string name="pref_smart_shortcuts">Smart brackets shortcuts</string>
    <string name="pref_smart_shortcuts_summary">If text is selected, {}, [] and () will surround the selection</string>
    <string name="pin_title">Enter your pin</string>
    <string name="passphrase_title">Enter your passphrase</string>
    <string name="pin_go">Go</string>
    <!-- Font Size -->
    <string name="font_size_normal">Normal</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_small">Small</string>
    <!-- Hard coded string fix -->
    <string name="last_modified">Last modified: %s</string>
    <string name="number_of_files">Number of files: %d</string>
    <string name="move_here">Move here</string>
    <string name="select_this_folder">Select this folder</string>
    <string name="select">Select</string>
    <string name="no_selected_file">No file selected</string>
    <string name="current_folder">Current folder:</string>
    <string name="create">Create</string>
    <string name="select_elements">Select entries</string>
    <string name="one_item_selected">One item selected</string>
    <string name="more_items_selected">%d items selected</string>
    <string name="rename_error_target_already_exists">Target file/folder already exists!</string>
    <string name="rename_success">Successfully renamed</string>
    <string name="rename_fail">Failed to rename</string>
    <!-- About screen -->
    <string name="about_version_title">Version</string>
    <string name="about_source_title">Writeily is Open Source on GitHub</string>
    <string name="about_developer_section">Developer</string>
    <string name="about_contributors_section">Contributors</string>
    <string name="about_original_section">Original creator</string>
    <string name="about_libraries_section">Libraries</string>
    <string name="about_translators_section">Translators</string>
    <string name="about_korean">Korean</string>
    <string name="about_german">German</string>
    <string name="about_polish">Polish</string>
    <string name="about_spanish">Spanish</string>
    <string name="about_french">French</string>
    <string name="about_chinese_simplified">Chinese (Simplified)</string>
    <string name="about_italian">Italian</string>
    <string name="about_croatian">Croatian</string>
    <string name="about_brazilian_portuguese">Brazilian Portuguese</string>
    <string name="tap_website">Tap to visit website</string>
    <string name="tap_github">Tap to visit profile on GitHub</string>
    <string name="pref_root_directory_title">Select storage folder</string>
</resources>